src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Invitation__c</fullName>
        <label>Invitation</label>
        <referenceTo>Invitation__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <formula>CASE(Question__r.Type__c, 
 &apos;String&apos;, &apos;String&apos;,
 &apos;Date&apos; , &apos;Date&apos; , 
 &apos;Boolean&apos;, &apos;Boolean&apos;,
 &apos;TextArea&apos;, &apos;TextArea&apos;,
&apos;Radio&apos;, &apos;Radio&apos;,
&apos;Integer&apos;, &apos;Integer&apos;,
&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>R00N40000001JAEsEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Bool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Yes No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Number__c</fullName>
        <description>Used for numbers or radio answers</description>
        <inlineHelpText>used for radio type responses</inlineHelpText>
        <label>Response Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A summary field that takes the type of response and translates it into Text</description>
        <formula>CASE(Question__r.Type__c , 
&apos;Boolean&apos;, IF ( Response_Bool__c , &apos;true&apos;, &apos;false&apos;), 
&apos;String&apos;,  Response__c,
&apos;TextArea&apos;,  Text_Area__c, 
&apos;Integer&apos;,  TEXT( Response_Number__c), 
&apos;Radio&apos;,  TEXT( Response_Number__c), 
&apos;Date&apos;, TEXT( Response_Date__c),

&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A summary field that takes the type of response and translates it into Text</inlineHelpText>
        <label>Response Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>Created_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Invitation__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Summary__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Created This Week</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Invitation__c</columns>
        <columns>Question__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Response_Number__c</columns>
        <columns>Response__c</columns>
        <columns>Response_Bool__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>